sandbox/output
ProfitJava6.java:11: error: method does not override or implement a method from a supertype
              @Override
              ^
ProfitJava6.java:9: error: cannot find symbol
    final Double costs = timed("Cost calculation",
                         ^
  symbol:   method timed(String,<anonymous Supplier<Double>>)
  location: class ProfitJava6
ProfitJava6.java:19: error: method does not override or implement a method from a supertype
              @Override
              ^
ProfitJava6.java:17: error: cannot find symbol
    final Double revenue = timed("Revenue calculation",
                           ^
  symbol:   method timed(String,<anonymous Supplier<Double>>)
  location: class ProfitJava6
ProfitJava6.java:26: error: cannot find symbol
            LoggerFunctions.info(logger),
            ^
  symbol:   variable LoggerFunctions
  location: class ProfitJava6
ProfitJava6.java:28: error: method does not override or implement a method from a supertype
              @Override
              ^
ProfitJava6.java:34: error: incompatible types: unexpected return value
    return profit;
           ^
ProfitTest.java:33: error: 'void' type not allowed here
        assertEquals(18845.9, ProfitJava6.calculate(), 0.001);
                                                   ^
8 errors
